Add max-incoming-payload-size property to the websocket connection.

This allows to change the limit for the payload of websocket packets.
Also add the corresponding unit test.

https://bugzilla.gnome.org/show_bug.cgi?id=770022